--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import 'katex/dist/katex.min.css'
 import 'highlight.js/styles/atom-one-dark.css'
 ---
 
-<Layout title="ChatGPT API Demo">
+<Layout title="ChatGPT公益版-SKY博客">
   <main >
     <Header />
     <Generator client:load />
