--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,9 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://ddiu.io" target="_blank"
+      href="https://sky350.com" target="_blank"
     >
-      Diu
+      SKY博客
     </a>
     <span px-1>|</span>
     <a
