--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <span pr-1>Made by</span>
     <a
       b-slate-link
-      href="https://sky350.com" target="_blank"
+      href="https://www.sky350.com" target="_blank"
     >
       SKY博客
     </a>
