--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,4 +13,12 @@ import Themetoggle from './Themetoggle.astro'
     <span class="gpt-subtitle">WEB</span>
   </div>
   <p mt-1 op-60>基于OpenAI最新gpt-3.5-turbo API</p>
+  <div style="height:50px;">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5201315122723978" crossorigin="anonymous" type="73f8c5037a251331e7ec5a12-text/javascript"></script>
+
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5201315122723978" data-ad-slot="1483524326" data-ad-format="auto" data-full-width-responsive="true"></ins>
+<script type="73f8c5037a251331e7ec5a12-text/javascript">
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 </header>
