--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import Themetoggle from './Themetoggle.astro'
     <span class="gpt-subtitle">WEB</span>
   </div>
   <p mt-1 op-60>基于OpenAI最新gpt-3.5-turbo API，服务器响应更快，效果更好。</p>
-  <p mt-1 op-60>ChatGPT官方回复需付费，默认由本站提供,但也可能随时欠费，若欠费不可用可发送邮件到service@sky350.com提醒我</p>
+  <p mt-1 op-60>ChatGPT请求需付费，默认由本站提供，但也可能随时欠费，若欠费不可用请发送邮件到service@sky350.com提醒我。</p>
   <div style="height:50px;">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5201315122723978" crossorigin="anonymous" type="73f8c5037a251331e7ec5a12-text/javascript"></script>
 
