--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,8 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content="ChatGPT免费体验,ChatGPT在线体验,ChatGPT官网地址,ChatGPT免登录,ChatGPT免注册,与Ai对话，请描述您的需求-支持中文、英语、日本语等,ChatGPT和本网站都是基于open ai实现的"/>
+		<meta name="keywords" content="ChatGPT 人工智能ChatGPT 聊天机器人ChatGPT ChatGPT免费 ChatGPT在线体验 ChatGPT官网 ChatGPT登录 ChatGPT注册 ChatGPT地址"/>
 		<title>{title}</title>
 		{ import.meta.env.HEAD_SCRIPTS ? <Fragment set:html={import.meta.env.HEAD_SCRIPTS} /> : null }
 	</head>
