--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,4 +15,6 @@
       Source Code
     </a>
   </p>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5201315122723978"
+     crossorigin="anonymous"></script>
 </footer>
