--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,13 +15,11 @@ import Themetoggle from './Themetoggle.astro'
   <p mt-1 op-60>基于OpenAI最新gpt-3.5-turbo API，服务器响应更快，效果更好。</p>
   <p mt-1 op-60>ChatGPT请求需付费，默认由本站提供，但也可能随时欠费，若欠费不可用请发送邮件到service@sky350.com提醒我。</p>
   <div style="height:75px;">
-<!-- sky.td -->
+<!-- chat150*639 -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:639px;height:150px"
      data-ad-client="ca-pub-5201315122723978"
-     data-ad-slot="1483524326"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="4986431273"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
