--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,6 +22,6 @@ import Themetoggle from './Themetoggle.astro'
      data-ad-slot="4986431273"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script><br/><br/>
 </div>
 </header>
