--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,4 +24,4 @@ import Themetoggle from './Themetoggle.astro'
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-</header><br/><br/>
+</header><br/><br/><br/>
